--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="-9dp" />
 
     <Button
         android:id="@+id/button10"
@@ -162,8 +163,9 @@
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="6dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginBottom="19dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <Button
         android:id="@+id/button15"
@@ -211,8 +213,9 @@
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/button19"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="19dp"
-        app:layout_constraintLeft_toLeftOf="@+id/button19" />
+        android:layout_marginBottom="28dp"
+        app:layout_constraintLeft_toLeftOf="@+id/button19"
+        android:layout_marginLeft="-22dp" />
 
     <Button
         android:id="@+id/button19"
@@ -222,10 +225,11 @@
         android:text="UpdateDB"
         android:layout_marginStart="22dp"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="-35dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="@+id/button3"
-        app:layout_constraintLeft_toRightOf="@+id/button3" />
+        app:layout_constraintLeft_toRightOf="@+id/button3"
+        android:layout_marginLeft="14dp" />
 
     <Button
         android:id="@+id/button20"
@@ -234,10 +238,11 @@
         android:onClick="onCall"
         android:text="Call"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="19dp"
         app:layout_constraintTop_toBottomOf="@+id/button14"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/button14" />
+        app:layout_constraintLeft_toLeftOf="@+id/button14"
+        android:layout_marginLeft="0dp" />
 
     <Button
         android:id="@+id/button21"
@@ -275,5 +280,14 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/button7"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintBaseline_creator="1" />
+
+    <Button
+        android:id="@+id/button29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onXML"
+        android:text="XML"
+        tools:layout_editor_absoluteX="245dp"
+        tools:layout_editor_absoluteY="314dp" />
 
 </android.support.constraint.ConstraintLayout>
